# telegram-multi-client

./: README.md  setup.py
telegram_client/: __init__.py
telegram_client/telegram_client/: core.py  pyproject.toml  requirements.py
telegram_multi_client/: __init__.py  core.py
telegram_multi_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
