[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-multi-client"
version = "2.0.0"
authors = [{name = "Your Name"}]
description = "Telegram Multi-Client with Arabic Commands"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["telethon>=1.28.5", "aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://github.com/yourusername/telegram-multi-client"